cartridges/mens_app/cartridge/static/default/css/style.css
/* ... */
.campaign-banner-message img {
  width: 80px !important;
  margin-right: 3px; }

header .main-menu {
  margin-top: 24px; }

.checkout.logo img {
  height: 2em; }

.checkout.header {
  padding: 2em 15px; }
  @media only screen and (max-width: 37.5em) {
    .checkout.header {
      justify-content: center !important; } }

.align-button-left {
  left: 17% !important;
  bottom: 25% !important; }

#navCont .minicart-quantity-container {
  position: absolute;
  top: -2px;
  right: -8px;
  background: #FD4237;
  border-radius: 20px;
  width: 15px;
  height: 15px;
  display: flex;
  justify-content: center;
  align-items: center; }

#customMenuResponsive .minicart-quantity-container {
  right: 43px;
  top: 6px; }
  #customMenuResponsive .minicart-quantity-container span {
    width: 15px;
    width: 6px;
    height: 19px; }

@-moz-document url-prefix() {
  #menuDesk .nav-item a {
    font-weight: initial; }
  select .custom-select {
    font-family: "AvenirLTStd-Heavy" !important; }
    select .custom-select option {
      color: green !important;
      font-family: "AvenirLTStd-Heavy" !important; } }

@media (min-width: 992px) {
  .brand {
    width: 20.125em;
    margin-left: -10.0625em; } }

@media (max-width: 991px) {
  .site-search {
    width: 100% !important; }
  .search {
    margin: 0 0 0 0 !important;
    padding-top: 5px; }
  #searchContainer form {
    width: 100%; }
  .search-field-responsive,
  .search-field {
    width: 100% !important; }
  .search-form-container {
    flex-direction: column; }
  .suggestions {
    right: 0px !important; }
  .suggestions,
  .suggestions-wrapper {
    width: 100%; }
  .favItem span {
    margin-left: 20px; }
  #customMenuResponsive .minicart {
    display: flex;
    margin-bottom: 12px !important; }
  #customMenuResponsive .cartLabel {
    margin-top: 4px;
    color: #000000 !important; }
  #customMenuResponsive #actions-icons img.minicart-img {
    margin-right: 16px !important; }
  #customMenuResponsive .minicart-quantityCustom {
    margin-right: 6px; }
  #customMenuResponsive #actions-icons img {
    margin-right: 22px !important; }
  #customMenuResponsive .toggle-category-button.back {
    font-size: 18px;
    line-height: 25px; }
  #customMenuResponsive h3.category-title {
    font-family: "AvenirLTStd-Heavy" !important;
    margin: 0 0 18px 0; }
  #customMenuResponsive .sub-items--lvl-one .nav-link.parent,
  #customMenuResponsive .sub-items--lvl-one .nav-link {
    font-weight: 800;
    text-transform: uppercase;
    font-size: 22px !important;
    line-height: 30px; }
  #customMenuResponsive .sub-items--lvl-two .nav-link.parent,
  #customMenuResponsive .sub-items--lvl-two .nav-link {
    font-size: 22px !important;
    line-height: 30px;
    text-transform: uppercase;
    padding: 0 !important; }
  #customMenuResponsive .sub-items--lvl-two .sub-items-parent,
  #customMenuResponsive .sub-items--lvl-two .sub-items-child {
    margin: 0 0 12px 0; }
  #actions-icons .nav-item .favItem {
    display: flex;
    align-items: center; }
  #actions-icons .nav-link {
    display: flex;
    align-items: center !important; }
  #actions-icons .nav-item a,
  #actions-icons .nav-item a span,
  #actions-icons .minicart span.cartLabel {
    font-size: 16px;
    line-height: 22px; }
    #actions-icons .nav-item a .minicart-quantity,
    #actions-icons .nav-item a span .minicart-quantity,
    #actions-icons .minicart span.cartLabel .minicart-quantity {
      font-size: 10px; }
  #actions-icons .minicart .minicart-total {
    display: flex;
    align-items: center; }
  #actions-icons .minicart .minicart-link {
    margin: 0; }
  #customMenuResponsive .cartLabel {
    font-family: "Avenir-LT-Std" !important;
    font-size: 14px; }
  .nav-link {
    padding: 0 0 10px 0 !important; }
  .align-button-left {
    left: 10% !important; }
  header .main-menu {
    margin-top: 0 !important; } }

@media (max-width: 768px) {
  .align-button-left {
    left: auto !important;
    bottom: 5% !important;
    position: absolute !important; }
    .align-button-left a {
      border: 1px solid #aaa !important; } }

@media (max-width: 543px) {
  .desk {
    display: none !important; }
  .campaign-banner {
    height: 50px !important; }
    .campaign-banner .campaign-banner-message {
      margin-top: 10px; }
      .campaign-banner .campaign-banner-message img {
        margin-right: 0; } }

/* **************************** FOOTER **************************** */
footer {
  overflow-x: hidden;
  overflow-y: hidden;
  width: 100%; }

footer {
  background-color: #231f20; }

footer .newsletter::placeholder {
  color: #ffffff; }

footer .newsletter {
  font-size: 14px;
  background-color: #231f20;
  border: 1px solid #ffffff;
  border-radius: 0px;
  height: 32px;
  width: 268px;
  color: #ffffff; }

footer .newsletter:focus {
  background-color: #231f20;
  border: 1px solid #ffffff;
  color: #ffffff !important;
  box-shadow: none; }

footer .input-group-append {
  padding-left: 6px; }

footer .input-group {
  margin-left: auto;
  margin-right: auto;
  max-width: 93%;
  padding-top: 10px;
  display: grid; }

footer .subscribe-email {
  font-size: 14px;
  background-color: #ffffff;
  border-radius: 0px;
  border: 1px solid #ffffff;
  color: #000000 !important;
  height: 32px !important;
  width: 92px !important; }
  footer .subscribe-email:focus {
    outline: 0; }

footer .subscribe-email {
  align-items: center; }

.footer-item:not(:first-child) {
  border-left: 0.3px solid #ffffff; }

footer .content li {
  height: auto !important; }

footer .content,
.footer-item,
.footer-item a,
.content-asset .footer-item button,
.footer-item h2 {
  font-size: 14px !important;
  line-height: 17px !important;
  color: #ffffff !important;
  font-family: "Avenir-LT-Std" !important; }

.goToUp {
  position: fixed !important;
  bottom: 25%;
  right: 20px; }

.goToUp i {
  /* height: 52px !important;
    width: 52px !important; */
  color: #000 !important;
  z-index: -1 !important; }
/* ... */

